# shiftedblog

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  env.example  manage.py  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: deploy.yml
api/: tests.py
api/editor/: media_urls.py  permissions.py  urls.py
blog/: admin.py  apps.py  cache_utils.py  category_helpers.py  context_processors.py  feeds.py  forms.py  models.py  querysets.py  signals.py  sitemap.py  tag_helpers.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0001_initial_squashed_0003_alter_post_cover_description_alter_post_cover_image_and_more.py  0002_seed_site_publications.py  0003_rename_blog_sitepub_pubat_idx_blog_sitepu_publish_3e0eea_idx.py  0004_alter_post_cover_image.py  0005_alter_post_slug.py  0006_post_views_alter_post_cover_image.py  0007_remove_post_series_postseries_post_series.py  0008_alter_post_published.py
blog/models/: __init__.py  account.py  person.py  post.py  skill.py  user.py
blog/templatetags/: __init__.py  blog_filters.py
core/: admin.py  apps.py  context_processors.py  crypto.py  fields.py  middleware.py  security_warnings.py  signals.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_copy_blog_user_to_core_user.py  0003_alter_user_groups.py  0004_network_credential.py  0005_alter_credential_encrypted_payload.py  0006_network_story_fallback_image.py  0007_telegramnetworksettings.py
core/models/: __init__.py  network.py  telegram_settings.py  user.py
docs/: security-runbook.md
editor/: admin.py  apps.py  cache_utils.py  forms.py  image_upload.py  middleware.py  post_history_service.py  signals.py  sitemap.py  tests.py  text_quality_service.py  urls.py  views.py
editor-ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
editor-ui/docs/: design-system.md
editor-ui/e2e/: smoke.spec.ts
editor-ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
editor/migrations/: 0001_initial.py  0002_update_content_types.py  0003_copy_blog_tables_to_editor.py  0004_add_post_gallery_image.py  0005_postgalleryimage_gallery_key.py  0006_post_uuid.py  0007_alter_postseries_options_alter_post_cover_image_and_more.py  0008_post_slug_redirect.py  0009_alter_post_cover_image_and_more.py  0010_post_optional_meta_fields.py  0011_post_history.py  0012_category_slug.py  0013_tag_slugs_latin.py
editor/models/: __init__.py  post.py
editor/templatetags/: editor_filters.py  editor_tags.py
nginx/: nginx.conf
scripts/: install-git-hooks.sh
scripts/backup/: run-backup.sh
scripts/security/: generate-admin-url.sh
scripts/ssh/: generate-git-deploy-key.sh  generate-vps-deploy-key.sh  install-server-git-access.sh  install-vps-authorized-key.sh  sshd-disable-password-auth.snippet
sender/: admin.py  admin_views.py  apps.py  tests.py
sender/migrations/: 0001_initial.py  0002_seed_site_postlinks_from_publications.py  0003_postlink_message_and_story_fields.py
shiftedblog/: .dockerignore  .gitignore  Dockerfile  README.md  asgi.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  rate_limited_views.py  requirements.txt  security_headers_middleware.py  settings.py  urls.py  wsgi.py
shiftedblog/.github/workflows/: deploy.yml
shiftedblog/blog/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
shiftedblog/blog/migrations/: 0001_initial.py  0002_account_person_skill.py  0002_alter_account_id_alter_accountgroup_id_and_more.py  0002_auto_20210302_1905.py  0002_series_alter_post_cover_image_post_series.py  0003_alter_post_cover_description_alter_post_cover_image_and_more.py  0003_auto_20210425_1828.py  0004_auto_20210425_1831.py  0005_auto_20210425_1850.py  0006_account_person.py  0007_auto_20210428_2251.py  0008_auto_20210723_2203.py  0009_auto_20210724_0024.py  0010_skill_rating.py  0011_auto_20210727_1929.py  0012_auto_20220621_1604.py  0013_auto_20220623_1125.py  0014_post_cover_image_credits.py
shiftedblog/blog/models/: __init__.py  account.py  person.py  post.py  skill.py
shiftedblog/blog/static/blog/css/: blog.css
shiftedblog/blog/templates/blog/post/: detail.html
shiftedblog/blog/templates/blog/templatetags/: blog_tags.py
shiftedblog/nginx/: nginx.conf
shiftedblog/shiftedblog/: .env.template  settings.py  urls.py
shiftedblog/static/css/: blog.css
shiftedblog/static/js/: tinymce.js
shiftedblog/templates/admin/: base.html
shiftedblog/templates/blog/: about.html  base.html  footer.html  header.html  pagination.html
shiftedblog/templates/blog/errors/: 404.html  500.html
shiftedblog/templates/blog/post/: detail.html  list.html  search.html  social_buttons.html
team/: admin.py  urls.py  views.py
(+128 files in other folders)
