[project]
name = "shiftedblog"
version = "0.1.3"
description = "Automated blogging tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.2",
    "django-axes>=8.0.0",
    "django-ckeditor-5>=0.2.18",
    "django-ratelimit>=4.1.0",
    "django-redis>=5.4.0",
    "django-taggit>=6.1.0",
    "django-two-factor-auth>=1.17.0",
    "phonenumbers>=9.0.8",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "qrcode>=7.4.2",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "yadisk>=3.4.0",
]
